# notion-games-updater

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  pyproject.toml  run.py
.github/workflows/: build-and-push.yaml
cmd/migrate/: main.go
cmd/server/: main.go
cmd/updater/: main.go
frontend/: .env.example  index.html  package-lock.json  tailwind.config.js
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: FixMatchModal.vue  GameCard.vue  GameDetailsModal.vue  GameSearch.vue  StatusPicker.vue  StickySearchBar.vue
frontend/src/composables/: useGameModal.js
frontend/src/lib/: dateUtils.js  platformColors.js  ratingColors.js
frontend/src/stores/: games.js
frontend/src/views/: AllView.vue  BacklogView.vue  CalendarView.vue  HistoryView.vue  PlayingView.vue
game-tracker/: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  SECURITY.md  TODO.md  assets.go  docker-compose.yml  go.mod  go.sum
game-tracker/cmd/migrate/: main.go
game-tracker/frontend/: .env.example  package-lock.json  package.json
internal/api/: enrichment.go  handler.go
internal/cache/: lru.go
internal/config/: config.go
internal/database/: firestore.go
internal/igdb/: client.go  types.go
internal/middleware/: auth.go  cors.go
internal/model/: game.go
internal/notion/: mapper.go
internal/usecase/: update_games.go
internal/worker/: sync.go
notion_games/: cli.py  config.py  schemas.py
notion_games/use_cases/: update_games_db.py
(+36 files in other folders)
